--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,63 @@
 
 html,body{
 	font-family: sans-serif;
+	margin-top:0px;
 }
+
+#socialBar{
+	width:100%;
+	height:50px;
+	background-color:rgba(0,0,0,.5);
+	position:fixed;
+	z-index:100;
+}
+
 #header{
 	width:100%;
-	height:500px;
-	background-image: url("images/hero_lg.jpg");
+	height:650px;
 	background-color:grey;
 	background-repeat:no-repeat;
 	margin-bottom:50px;
 }
+
 
 #title{
 	font-size:32px;
 	letter-spacing: 12pt;
 	color: white;
 	text-align: center;
-	padding-top:300px;
+	padding-top:500px;
 	padding-left:10px;
 	padding-right:10px;
+}
+
+.social{
+	padding:5px;
+	height:40px;
+	z-index:100;
+	float:right;
+}
+
+#firstScroll{
+	padding-top:50px; 
+	margin-left:40px;
+
+}
+
+.sectionTitle{
+	font-size:16pt;
+	letter-spacing:10pt;
+	text-align:center;
+	color:grey;
+}
+
+.clearfix{
+		clear:both;
+}
+
+footer{
+	font-size:10pt;
+	text-align:center;
+	padding-top:50px;
+	padding-bottom:20px;
 }
