--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 html,body{
 	font-family: sans-serif;
-	margin-top:0px;
+	margin:0px;
 }
 
 #socialBar{
@@ -12,14 +12,21 @@ html,body{
 	z-index:100;
 }
 
-#header{
+.social{
+	height:40px;
+	z-index:100;
+	padding:5px;
+	float:right;
+}
+
+/*#header{
 	width:100%;
 	height:650px;
 	background-color:grey;
 	background-repeat:no-repeat;
 	margin-bottom:50px;
-}
 
+}*/
 
 #title{
 	font-size:32px;
@@ -29,13 +36,6 @@ html,body{
 	padding-top:500px;
 	padding-left:10px;
 	padding-right:10px;
-}
-
-.social{
-	padding:5px;
-	height:40px;
-	z-index:100;
-	float:right;
 }
 
 #firstScroll{
