--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html,body{
 #socialBar{
 	width:100%;
 	height:50px;
-	background-color:rgba(0,0,0,.5);
+	background-color:rgba(72,72,72,1);
 	position:fixed;
 	z-index:100;
 }
@@ -26,7 +26,7 @@ html,body{
 	background-repeat:no-repeat;
 	margin-bottom:50px;
 
-}*/
+}
 
 #title{
 	font-size:32px;
@@ -36,23 +36,40 @@ html,body{
 	padding-top:500px;
 	padding-left:10px;
 	padding-right:10px;
-}
+}*/
 
-#firstScroll{
-	padding-top:50px; 
-	margin-left:40px;
+nav{
 
 }
 
-.sectionTitle{
-	font-size:16pt;
-	letter-spacing:10pt;
+nav ul{
+	width:100%;
+	margin-top:50px;
+	list-style:none;
+	float:left;
+	background:rgb(208,208,208);
+	position:fixed;	
+}
+
+nav ul li{
+	color:rgb(72,72,72);
+	font-size:10pt;
+	padding-top:10px;
+	padding-bottom:10px;
+	padding-right:20px;
+	float:left;
+}
+
+
+h1{
+	font-size:20pt;
 	text-align:center;
+	letter-spacing:10pt;
 	color:grey;
 }
 
 .clearfix{
-		clear:both;
+	clear:both;
 }
 
 footer{
@@ -60,4 +77,38 @@ footer{
 	text-align:center;
 	padding-top:50px;
 	padding-bottom:20px;
+
+	border:solid 1px;
+
+}
+
+p{
+	margin-left:40px;
+	float:left;
+	width:300px;
+
+	border:solid 1px;
+
+
+}
+
+h3{
+	margin-left:40px;
+	float:left;
+
+	border:solid 1px;
+
+}
+
+img{
+	display:inline-block;
+	float:left;
+}
+
+.thumb{
+	margin-top:20px;
+	height:250px;
+	margin-left:40px;
+	padding-right:10px;
+	float:left;
 }
