--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,24 @@ html,body{
 	float:right;
 }
 
+#logoJM{
+	color:white;
+	font-size:30pt;
+	display:inline-block;
+	margin-top:3px;
+}
+
+.logoJM{
+	color:white;
+	margin-left:5px;
+	font-weight:bold;
+}
 /*#header{
 	width:100%;
 	height:650px;
 	background-color:grey;
 	background-repeat:no-repeat;
 	margin-bottom:50px;
-
 }
 
 #title{
@@ -37,6 +48,8 @@ html,body{
 	padding-left:10px;
 	padding-right:10px;
 }*/
+
+
 
 nav{
 
@@ -60,6 +73,14 @@ nav ul li{
 	float:left;
 }
 
+a{
+	text-decoration:none;
+	color:rgb(72,72,72);
+}
+
+a:hover{
+	color:white;
+}
 
 h1{
 	font-size:20pt;
@@ -72,32 +93,10 @@ h1{
 	clear:both;
 }
 
-footer{
-	font-size:10pt;
-	text-align:center;
-	padding-top:50px;
-	padding-bottom:20px;
-
-	border:solid 1px;
-
-}
-
-p{
-	margin-left:40px;
-	float:left;
-	width:300px;
-
-	border:solid 1px;
-
-
-}
 
 h3{
 	margin-left:40px;
 	float:left;
-
-	border:solid 1px;
-
 }
 
 img{
@@ -111,4 +110,45 @@ img{
 	margin-left:40px;
 	padding-right:10px;
 	float:left;
+}
+
+footer{
+	font-size:10pt;
+	text-align:center;
+	padding-top:50px;
+	padding-bottom:20px;
+}
+
+
+/*////////////////about.html////////////////*/
+#containerAbout{
+	width: 1200px;
+
+	border:solid 5px red;
+}
+
+.About{
+	display:inline-block;
+	width:100%;
+}
+
+#sideLeft{
+	width:30%;
+	margin-top:110px;
+	height:800px;
+	float:left;
+}
+
+#sideRight{
+	width:60%;
+	height:800px;
+	margin-top:100px;
+	padding-right:60px;
+	padding-left:60px;
+	float:left;
+}
+
+p.resume{
+	width: 100px;
+	color:rgb(72,72,72);
 }
